[package]
name = "pallet-datdot"
version = "2.0.0-dev"
authors = ["Datdot Authors"]
edition = "2018"
license = "Unlicense"
homepage = "https://playproject.io"
repository = "https://github.com/playproject-io/datdot-substrate"
description = "Datdot Substrate Pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.106", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../frame/support" }
frame-system = { version = "2.0.0-dev", default-features = false, path = "../frame/system" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../primitives/runtime" }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../primitives/std" }
sp-io = { version = "2.0.0-dev", default-features = false, path = "../primitives/io" }
sp-core = { version = "2.0.0-dev", path = "../primitives/core", default-features = false }
rand_chacha = { version = "0.2", default-features = false }

frame-benchmarking = { version = "2.0.0-dev", default-features = false, path = "../frame/benchmarking", optional = true }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
	"sp-std/std"
]
runtime-benchmarks = ["frame-benchmarking"]
