[package]
name = "datdot-node"
version = "2.0.0-rc3"
edition = "2018"
authors = ['datdot authors']
repository = 'https://github.com/playproject-io/datdot-substrate'
description = 'An instant-sealing Substrate node for datdot. Based on the substrate kitchen-node found at https://github.com/substrate-developer-hub/recipes.'
license = "GPL-3.0-or-later"

compatibility_version = "2.0.0-rc3"

[[bin]]
name = "datdot-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.3.1"
structopt = "0.3.8"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.2.0"
parking_lot = "0.9.0"
trie-root = "0.15.2"
sc-basic-authorship = '0.8.0-rc3'
sc-cli = '0.8.0-rc3'
sc-client-api = '2.0.0-rc3'
sc-consensus = '0.8.0-rc3'
sc-consensus-manual-seal = '0.8.0-rc3'
sc-executor = '0.8.0-rc3'
sc-network = '0.8.0-rc3'
sc-service = '0.8.0-rc3'
sc-transaction-pool = '2.0.0-rc3'
sp-consensus = '0.8.0-rc3'
sp-core = '2.0.0-rc3'
sp-inherents = '2.0.0-rc3'
sp-io = '2.0.0-rc3'
sp-runtime = '2.0.0-rc3'
sp-timestamp = '2.0.0-rc3'
sp-transaction-pool = '2.0.0-rc3'
runtime = { package = "datdot-runtime", path = "../runtime" }


[build-dependencies]
vergen = "3.0.4"
substrate-build-script-utils = '2.0.0-rc3'

[features]
ocw = []
