[package]
name = "datdot-node"
version = "2.0.0"
edition = "2018"
authors = ["datdot authors"]
repository = "https://github.com/playproject-io/datdot-substrate"
description = "An instant-sealing Substrate node for datdot. Based on the substrate kitchen-node found at https://github.com/substrate-developer-hub/recipes."
license = "GPL-3.0-or-later"

compatibility_version = "2.0.0"

[[bin]]
name = "datdot-node"
path = "src/main.rs"

[dependencies]
jsonrpc-core = '15.0.0'
derive_more = "0.15.0"
futures = "0.3.7"
structopt =  { version =  "0.3.20", optional = true }
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.7", features = ["termination"] }
log = "0.4.11"
tokio = "0.1.22"
exit-future = "0.2.0"
parking_lot = "0.9.0"
trie-root = "0.15.2"
sc-rpc = "2.0.0"
sc-basic-authorship = "0.8.0"
sc-cli = { version = "0.8.0", optional = true }
sc-client-api = "2.0.0"
sc-consensus = "0.8.0"
sc-consensus-aura = "0.8.0"
sp-consensus-aura = "0.8.0"
sc-finality-grandpa = "0.8.0"
sc-authority-discovery = "0.8.0"
sc-executor = "0.8.0"
sc-network = "0.8.0"
sc-service = { version = "0.8.0", default-features = false }
sc-transaction-pool = "2.0.0"
sp-consensus = "0.8.0"
sp-core = "2.0.0"
sp-inherents = "2.0.0"
sp-io = "2.0.0"
sp-runtime = "2.0.0"
sp-timestamp = "2.0.0"
sp-transaction-pool = "2.0.0"
sp-api = "2.0.0"
sp-blockchain = "2.0.0"
sp-block-builder = "2.0.0"
sc-rpc-api = "0.8.0"
substrate-frame-rpc-system = "2.0.0"
frame-benchmarking = "2.0.0"
frame-benchmarking-cli = { version = "2.0.0", optional = true }

wasm-bindgen = { version = "0.2.68", optional = true }
wasm-bindgen-futures = { version = "0.4.18", optional = true }
browser-utils = { package = "substrate-browser-utils", optional = true, version = "0.8.0"}

# node-specific dependencies
runtime = { package = "datdot-runtime", path = "../runtime" }


# frame dependencies
pallet-timestamp = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }
frame-support = { version = "2.0.0", default-features = false }
pallet-im-online = { version = "2.0.0", default-features = false }
pallet-authority-discovery = { version = "2.0.0" }
pallet-staking = { version = "2.0.0" }
pallet-grandpa = { version = "2.0.0" }


[build-dependencies]
vergen = "3.0.4"
substrate-build-script-utils = { version = "2.0.0", optional = true }

[features]
default = ["cli"]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
cli = [
	"sc-cli",
	"frame-benchmarking-cli",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
