[package]
name = "datdot-runtime"
version = "2.0.0-rc3"
authors = ["datdot authors"]
repository = 'https://github.com/playproject-io/datdot-substrate'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A super-minimal runtime to demonstrate pallet-datdot, based on https://github.com/substrate-developer-hub/recipes/tree/master/runtimes/weight-fee-runtime"

[package.metadata.substrate]
categories = []
compatibility_version = "2.0.0-rc3"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.2.0", features = ["derive"], default-features = false }
smallvec = "1.4"

frame-executive = { version = '2.0.0-rc3', default-features = false }
frame-support = { version = '2.0.0-rc3', default-features = false }
frame-system = { version = '2.0.0-rc3', default-features = false }
sp-api = { version = '2.0.0-rc3', default-features = false }
sp-block-builder = { version = '2.0.0-rc3', default-features = false }
sp-core = { version = '2.0.0-rc3', default-features = false }
sp-inherents = { version = '2.0.0-rc3', default-features = false }
sp-io = { version = '2.0.0-rc3', default-features = false }
sp-offchain = { version = '2.0.0-rc3', default-features = false }
sp-runtime = { version = '2.0.0-rc3', default-features = false }
sp-session = { version = '2.0.0-rc3', default-features = false }
sp-std = { version = '2.0.0-rc3', default-features = false }
sp-transaction-pool = { version = '2.0.0-rc3', default-features = false }
sp-version = { version = '2.0.0-rc3', default-features = false }

balances = { package = 'pallet-balances', version = '2.0.0-rc3', default-features = false }
generic-asset = { package = 'pallet-generic-asset', version = '2.0.0-rc3', default-features = false }
randomness-collective-flip = { package = 'pallet-randomness-collective-flip', version = '2.0.0-rc3', default-features = false }
timestamp = { package = 'pallet-timestamp', version = '2.0.0-rc3', default-features = false }
sudo = { package = 'pallet-sudo', version = '2.0.0-rc3', default-features = false }
scheduler = { package = 'pallet-scheduler', version = '2.0.0-rc3', default-features = false }
dat-verify = { package = 'pallet-datdot', version = '2.0.0-rc3', default-features = false, path = "../pallets/datdot" }


[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = ["std"]
std = [
	"balances/std",
	"sp-block-builder/std",
	"frame-executive/std",
	"generic-asset/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"parity-scale-codec/std",
	"randomness-collective-flip/std",
	"sp-std/std",
	"sp-io/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-session/std",
	"sudo/std",
	"frame-support/std",
	"frame-system/std",
	"timestamp/std",
	"sp-version/std",
	"sp-transaction-pool/std",
	"scheduler/std",
	"dat-verify/std",
]
