[package]
name = "datdot-runtime"
version = "2.0.0"
authors = ["datdot authors"]
repository = 'https://github.com/playproject-io/datdot-substrate'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A super-minimal runtime to demonstrate pallet-datdot, based on https://github.com/substrate-developer-hub/recipes/tree/master/runtimes/weight-fee-runtime"

[package.metadata.substrate]
categories = []
compatibility_version = "2.0.0"

[dependencies]
serde = { version = "1.0.117", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.3.5", features = ["derive"], default-features = false }
smallvec = "1.4"
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }

frame-executive = { version = '2.0.0', default-features = false }
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
frame-system-rpc-runtime-api = { version = '2.0.0', default-features = false }
frame-system-benchmarking = { version = "2.0.0", default-features = false, optional = true }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
sp-api = { version = '2.0.0', default-features = false }
sp-block-builder = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-inherents = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-offchain = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-session = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
sp-transaction-pool = { version = '2.0.0', default-features = false }
sp-version = { version = '2.0.0', default-features = false }
sp-consensus-aura = { version = "0.8.0", default-features = false }
sp-finality-grandpa = { version = "2.0.0", default-features = false }


pallet-balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
pallet-randomness-collective-flip = { package = 'pallet-randomness-collective-flip', version = '2.0.0', default-features = false }
pallet-timestamp = { package = 'pallet-timestamp', version = '2.0.0', default-features = false }
pallet-sudo = { package = 'pallet-sudo', version = '2.0.0', default-features = false }
pallet-scheduler = { package = 'pallet-scheduler', version = '2.0.0', default-features = false }
pallet-dat-verify = { package = 'pallet-datdot', version = '2.0.0', default-features = false, path = "../pallets/datdot" }
pallet-aura = { package = 'pallet-aura', version = "2.0.0", default-features = false }
pallet-grandpa = { package = 'pallet-grandpa', version = "2.0.0", default-features = false }
pallet-offences = { package = 'pallet-offences', version = "2.0.0", default-features = false }
pallet-session = { version = "2.0.0", default-features = false }
pallet-session-benchmarking = { version = "2.0.0", default-features = false, optional = true }
pallet-offences-benchmarking = { version = "2.0.0", default-features = false, optional = true }


[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "2.0.0" }

[features]
default = ["std"]
std = [
	"pallet-balances/std",
	"sp-block-builder/std",
	"frame-executive/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"parity-scale-codec/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"sp-io/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"sp-transaction-pool/std",
	"pallet-scheduler/std",
	"pallet-dat-verify/std",
	"pallet-aura/std",
	"pallet-grandpa/std",
	"pallet-offences/std",
	"pallet-session/std",
	"sp-consensus-aura/std",
	"frame-system-rpc-runtime-api/std"
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]