[package]
name = "pallet-datdot-rewards"
version = "2.0.0"
authors = ["Datdot Authors"]
edition = "2018"
license = "Unlicense"
homepage = "https://playproject.io"
repository = "https://github.com/playproject-io/datdot-substrate"
description = "Datdot Substrate Pallet - rewards and payouts for configurable resources and jobs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.114", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }
pallet-wealth-tax = { version = "2.0.0", default-features = false, path = "../wealth-tax/" }

pallet-orchard = { version = "2.0.0", default-features = false, path = "../orchard/" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1", default-features = false }

frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
	"sp-arithmetic/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
